fixed page margin changing when scrollbar appears

--- a/instantrecipe/frontend/src/common.css
+++ b/instantrecipe/frontend/src/common.css
@@ -1,6 +1,7 @@
 html {
   font-size: 24px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow-y: scroll;
 }
 
 body {
